# Game

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
android/: .gitignore  AndroidManifest.xml  build.gradle
android/res/color/: button_background_color.xml
android/res/drawable/: all_inclusive_24px.xml  button_ripple.xml  button_stroke.xml  flash_on_24px.xml  monitor_24px.xml  timer_24px.xml  volume_off_24px.xml
android/res/drawable-hdpi/: google.xml
android/res/layout/: account_menu_layout.xml  activity_change_time.xml  activity_login.xml  activity_login_way.xml  activity_main.xml  activity_play_with_ai_set_up.xml  activity_profile.xml  activity_register.xml  activity_setting.xml  activity_two_persons_play_set_up.xml  bottom_sheet_layout.xml  fragement_history.xml  fragment_play.xml  fragment_rank.xml  history_row_layout.xml  rank_row_layout.xml
android/res/menu/: bottom_navigation_menu.xml
android/res/values/: color.xml  strings.xml  themes.xml
android/res/values-en/: strings.xml
android/res/values-night/: themes.xml
android/res/values-v23/: themes.xml
android/src/main/cpp/: CMakeLists.txt  Readme.txt
android/src/main/java/com/huy/game/android/: AndroidLauncher.java  ChangeTimeActivity.java  LoginActivity.java  (+7 more)
assets/i18N/: bundle.properties  bundle_en.properties  bundle_vi.properties
assets/ui/: montserrat.fnt  uiskin.json
core/: build.gradle
core/src/main/java/com/huy/game/: FirstScreen.java  Main.java
html/: build.gradle
html/src/main/java/com/huy/game/: GdxDefinition.gwt.xml  GdxDefinitionSuperdev.gwt.xml
lwjgl3/: build.gradle
server/: app.js  package-lock.json  package.json
server/config/: cloudinaryConfig.js  firebaseConfig.js  redisConfig.js
server/controllers/restful/: authUser.js  rank.js  user.js
server/controllers/socket/: SocketRanking.js  chessGame.js
server/luaScripts/: addToPlayingHash.lua  loadScripts.js
server/middlewares/: authenticateToken.js  errorsMiddleware.js
server/prisma/: schema.prisma
server/prisma/migrations/20241001043923_/: migration.sql
server/prisma/migrations/20241002111015_/: migration.sql
server/prisma/migrations/20241006024145_/: migration.sql
server/prisma/migrations/20241013092612_/: migration.sql
server/routes/: authUser.js  index.js  rank.js  users.js
server/utils/: eloUtil.js  jwtUtil.js  randomPassword.js  redisRankUtil.js
shared/: .gitignore  build.gradle
(+155 files in other folders)
